--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
         <h1>Кошик</h1>
         <div class="cart">
             <div class="cart-item">
-                <img src="/placeholder.svg?height=100&width=100" alt="Товар 1">
+                <img src="goods-filled-svgrepo-com.svg" alt="Товар 1">
                 <div class="item-details">
                     <h2>Товар 1</h2>
                     <p>Ціна: 100 грн</p>
@@ -34,17 +34,26 @@
                 <button class="btn remove-btn">Видалити</button>
             </div>
             <div class="cart-item">
-                <img src="/placeholder.svg?height=100&width=100" alt="Товар 2">
+                <img src="marketplace-old-svgrepo-com.svg" alt="Товар 2">
                 <div class="item-details">
                     <h2>Товар 2</h2>
-                    <p>Ціна: 150 грн</p>
+                    <p>Ціна: 1500 грн</p>
+                    <input type="number" value="1" min="1">
+                </div>
+                <button class="btn remove-btn">Видалити</button>
+            </div>
+            <div class="cart-item">
+                <img src="shopping-package-svgrepo-com.svg" alt="Товар 2">
+                <div class="item-details">
+                    <h2>Товар 3</h2>
+                    <p>Ціна: 2500 грн</p>
                     <input type="number" value="1" min="1">
                 </div>
                 <button class="btn remove-btn">Видалити</button>
             </div>
         </div>
         <div class="cart-total">
-            <h2>Загальна сума: 250 грн</h2>
+            <h2>Загальна сума: 4100 грн</h2>
             <a href="checkout.html" class="btn">Оформити замовлення</a>
         </div>
     </main>
