--- a/categories.html
+++ b/categories.html
@@ -25,17 +25,17 @@
         <h1>Категорії товарів</h1>
         <div class="category-grid">
             <div class="category-card">
-                <img src="/placeholder.svg?height=150&width=150" alt="Категорія 1">
+                <img src="windows-round-svgrepo-com.svg" alt="Категорія 1">
                 <h2>Категорія 1</h2>
                 <a href="#" class="btn">Переглянути</a>
             </div>
             <div class="category-card">
-                <img src="/placeholder.svg?height=150&width=150" alt="Категорія 2">
+                <img src="package-box-svgrepo-com.svg" alt="Категорія 2">
                 <h2>Категорія 2</h2>
                 <a href="#" class="btn">Переглянути</a>
             </div>
             <div class="category-card">
-                <img src="/placeholder.svg?height=150&width=150" alt="Категорія 3">
+                <img src="gift-box-svgrepo-com.svg" alt="Категорія 3">
                 <h2>Категорія 3</h2>
                 <a href="#" class="btn">Переглянути</a>
             </div>
