--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="contacts.html">Контакти</a></li>
             </ul>
         </nav>
+        <a href="profile.html" class="login-btn">Увійти</a>
     </header>
 
     <main>
@@ -29,21 +30,21 @@
             <h2>Популярні товари</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Товар 1">
+                    <img src="goods-filled-svgrepo-com.svg" alt="Товар 1">
                     <h3>Товар 1</h3>
                     <p>Ціна: 100 грн</p>
                     <a href="product.html" class="btn">Детальніше</a>
                 </div>
                 <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Товар 2">
+                    <img src="marketplace-old-svgrepo-com.svg" alt="Товар 2">
                     <h3>Товар 2</h3>
-                    <p>Ціна: 150 грн</p>
+                    <p>Ціна: 1500 грн</p>
                     <a href="product.html" class="btn">Детальніше</a>
                 </div>
                 <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Товар 3">
+                    <img src="shopping-package-svgrepo-com.svg" alt="Товар 3">
                     <h3>Товар 3</h3>
-                    <p>Ціна: 200 грн</p>
+                    <p>Ціна: 2500 грн</p>
                     <a href="product.html" class="btn">Детальніше</a>
                 </div>
             </div>
