--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
 
     <main>
         <div class="product-details">
-            <img src="/placeholder.svg?height=400&width=400" alt="Товар">
+            <img src="goods-filled-svgrepo-com.svg" alt="Товар">
             <div class="product-info">
                 <h1>Назва товару</h1>
                 <p class="price">Ціна: 100 грн</p>
